data/derived/comb/progs/unify/prog5363.ml.out
Characters 89-112:
  (10*o, bigAdd(mulByDigit prod, l1 l))
               ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
